basic features are added. started working on css

--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,8 @@
                 <option value="no">no</option>
             </select>
             <button type="submit" class="btn" id="save">save</button>
+            <button type="submit" class="btn" id="cancel">cancel</button>
+
             </form>
         </div>
         <div class='books-container' id="books-container">
