loading books from db, updating read status works

--- a/public/index.html
+++ b/public/index.html
@@ -52,14 +52,10 @@
         https://firebase.google.com/docs/web/setup#available-libraries -->
     <script defer src="/__/firebase/8.6.5/firebase-firestore.js"></script>
     <script defer src="/__/firebase/8.6.5/firebase-auth.js"></script>
-    <script defer src="/__/firebase/8.6.5/storage.js"></script>
+    <!-- <script defer src="/__/firebase/8.6.5/storage.js"></script> -->
 
 
     <!-- Initialize Firebase -->
     <script src="/__/firebase/init.js"></script>
-
-    <script>
-     
-    </script>
 </body>
 </html>
