switched to using 'class' in factory book factory

--- a/public/index.html
+++ b/public/index.html
@@ -28,8 +28,8 @@
             <input type="number" id="number-of-pages" placeholder="number of pages" name="number-of-pages" required>
             <label for="read">have you read the book?</label>
                 <select name="read" id="read">
-                <option value="yes">yes</option>
-                <option value="no">no</option>
+                <option value="true">yes</option>
+                <option value="false">no</option>
             </select>
             <button type="submit" class="btn" id="save">save</button>
             <button type="submit" class="btn" id="cancel">cancel</button>
